--- a/Client/pages/cart/components/cart-empty/index.wxss
+++ b/Client/pages/cart/components/cart-empty/index.wxss
@@ -7,11 +7,8 @@
   height: calc(100vh - 100rpx);
   background-color: #f5f5f5;
 }
-.cart-empty .cart-img {
-  width: 80rpx;
-  height: 80rpx;
+.cart-empty .cart-icon {
   margin-bottom: 24rpx;
-
 }
 
 .cart-empty .tip {
