--- a/Client/pages/goods/result/index.wxml
+++ b/Client/pages/goods/result/index.wxml
@@ -1,7 +1,5 @@
 <view class="result-container">
-  <t-search t-class="t-search" t-class-input-container="t-class__input-container" t-class-left="t-search__left-icon" t-class-input="t-search__input" value="{{keywords}}" leftIcon="" placeholder="" bind:submit="handleSubmit">
-    <t-icon slot="left-icon" prefix="wr" name="search" size="40rpx" color="#bbb" />
-  </t-search>
+  <!-- 搜索框已移除，用户搜索后直接显示结果 -->
   <filter wr-class="filter-container" bind:change="handleFilterChange" layout="{{layout}}" sorts="{{sorts}}" overall="{{overall}}" bind:showFilterPopup="showFilterPopup">
     <filter-popup show="{{show}}" slot="filterPopup" bind:showFilterPopupClose="showFilterPopupClose" bind:reset="reset" bind:confirm="confirm">
       <view class="price-container" slot="filterSlot">
