--- a/Client/pages/goods/details/index.wxml
+++ b/Client/pages/goods/details/index.wxml
@@ -47,7 +47,7 @@
           </t-button>
         </view>
       </view>
-      <view class="goods-intro">{{intro}}</view>
+
     </view>
     <view class="spu-select" bindtap="showSkuSelectPopup">
       <view class="label">已选</view>
@@ -58,6 +58,21 @@
         <t-icon name="chevron-right" size="40rpx" color="#BBBBBB" />
       </view>
     </view>
+    <!-- 详情介绍部分 - 移到评论之前 -->
+    <view class="desc-content">
+      <view class="desc-content__title">
+        <span class="desc-content__title--text">详情介绍</span>
+      </view>
+      <!-- 添加detail字段内容显示 -->
+      <view wx:if="{{intro}}" class="desc-content__detail">
+        <view class="detail-text">{{intro}}</view>
+      </view>
+      <!-- 原有的desc图片内容 -->
+      <view wx:if="{{details.desc.length > 0}}" wx:for="{{details.desc}}" wx:key="index">
+        <t-image t-class="desc-content__img" src="{{item}}" mode="widthFix" />
+      </view>
+    </view>
+    <!-- 商品评价部分 - 移到详情介绍之后 -->
     <view class="comments-wrap">
       <view class="comments-head" bindtap="navToCommentsListPage">
         <view class="comments-title-wrap">
@@ -100,24 +115,15 @@
         </block>
       </view>
       <view wx:else class="comment-item-wrap">
-        <view class="comment-item-content">暂无评论</view>
+        <view class="comment-item-content no-comment-hint">暂无评论，点击上方标题栏可以发表评论</view>
       </view>
       <view wx:if="{{comments.length > 2}}" class="comments-expand-all">
         <t-button size="small" variant="text" bindtap="onToggleAllComments">
           {{ showAllComments ? '收起评论' : '展开全部评论' }}
         </t-button>
       </view>
-
-    </view>
-  </view>
-  <view class="desc-content">
-    <view class="desc-content__title" wx:if="{{details.desc.length > 0}}">
-      <t-image t-class="img" src="{{recLeftImg}}" />
-      <span class="desc-content__title--text">详情介绍</span>
-      <t-image t-class="img" src="{{recRightImg}}" />
-    </view>
-    <view wx:if="{{details.desc.length > 0}}" wx:for="{{details.desc}}" wx:key="index">
-      <t-image t-class="desc-content__img" src="{{item}}" mode="widthFix" />
+      <!-- 评论模块底部分界线 -->
+      <view class="comments-bottom-divider"></view>
     </view>
   </view>
   <view class="goods-bottom-operation">
